slop: webUI now has stop button
